# PIM-Software

./: README.md  build-clang.sh  build-mlir-clang.sh  build-pim.sh  pim-avail.patch
PIM_BLAS/: .out.txt.swp  Makefile  cblas_sgemm.cl  escal_out.txt  micro_bench  testblas.tar  testc.c  testcuda.cu  testocl.c  testomp.c  testpython.py
PIM_BLAS/bench/: Makefile  test.c
PIM_BLAS/include/: cblas.h
PIM_BLAS/src/: .cblas_sdot.c.swp  Makefile  cblas.h  cblas_saxpy.c  cblas_sdot.c  cblas_sdsdot.c  cblas_sgemm.c  cblas_sgemv.c  cblas_sgemv_usermode.c  cblas_sparselengthssum.c  cblas_sscal.c  pim_avail_op.c  pim_avail_op.h  test.c
PIM_IR/: CMakeLists.txt  Makefile  README.md  out.mlir  translate.py
PIM_IR/PIM-IR/: CMakeLists.txt  PIM-IR.cpp
PIM_IR/include/: CMakeLists.txt
PIM_IR/include/Conversion/APIMToLLVM/: APIMToLLVM.h
PIM_IR/include/Conversion/DPIMToLLVM/: DPIMToLLVM.h
PIM_IR/include/Conversion/PIMCommon/: PIMCommon.h
PIM_IR/include/Conversion/PIMToAPIM/: PIMToAPIM.h
PIM_IR/include/Conversion/PIMToDPIM/: PIMToDPIM.h
PIM_IR/include/Conversion/PIMToPNM/: PIMToPNM.h
PIM_IR/include/Conversion/PNMToLLVM/: PNMToLLVM.h
PIM_IR/include/Dialect/: CMakeLists.txt
PIM_IR/include/Dialect/APIM/IR/: APIMOps.hpp  APIMOps.td  CMakeLists.txt
PIM_IR/include/Dialect/DPIM/IR/: CMakeLists.txt  DPIMOps.hpp  DPIMOps.td
PIM_IR/include/Dialect/PIM/IR/: CMakeLists.txt  PIMOps.hpp  PIMOps.td
PIM_IR/include/Dialect/PNM/IR/: CMakeLists.txt  PNMOps.hpp  PNMOps.td
PIM_IR/include/Pass/: CMakeLists.txt  Passes.h  Passes.td
PIM_IR/lib/: CMakeLists.txt
PIM_IR/lib/CallToPIM/: CMakeLists.txt  CallToPIM.cpp
PIM_IR/lib/Conversion/: CMakeLists.txt
PIM_IR/lib/Conversion/APIMToLLVM/: APIMToLLVM.cpp  CMakeLists.txt
PIM_IR/lib/Conversion/DPIMToLLVM/: CMakeLists.txt  DPIMToLLVM.cpp
PIM_IR/lib/Conversion/PIMCommon/: CMakeLists.txt  PIMCommon.cpp
PIM_IR/lib/Conversion/PIMToAPIM/: CMakeLists.txt  PIMToAPIM.cpp
PIM_IR/lib/Conversion/PIMToDPIM/: CMakeLists.txt  PIMToDPIM.cpp
PIM_IR/lib/Conversion/PIMToPNM/: CMakeLists.txt  PIMToPNM.cpp
PIM_IR/lib/Conversion/PNMToLLVM/: CMakeLists.txt  PNMToLLVM.cpp
PIM_IR/lib/Dialect/: CMakeLists.txt
PIM_IR/lib/Dialect/APIM/IR/: APIMOps.cpp  CMakeLists.txt
PIM_IR/lib/Dialect/DPIM/: CMakeLists.txt
PIM_IR/lib/Dialect/DPIM/IR/: CMakeLists.txt  DPIMOps.cpp
PIM_IR/lib/Dialect/PIM/IR/: CMakeLists.txt  PIMOps.cpp
PIM_IR/lib/Dialect/PNM/IR/: CMakeLists.txt  PNMOps.cpp
PIM_IR/test/: pnm.mlir
test/: backend.sh  frontend.sh  midend.sh
